--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4183,14 +4183,6 @@ div[id ^= "mini-panel-partner_in_"], {
 		margin-bottom: 20px;
 	}
 }
-.node-strategic_documentation-form{
-	> div{
-		background-color: @color-primary;
-		padding-top: 25px;
-		padding-bottom: 25px;
-		margin-bottom: 20px;
-	}
-}
 .node-form{
 	.pane-custom{
 		h2{
@@ -4541,6 +4533,12 @@ div[id ^= "mini-panel-partner_in_"], {
 
 //list
 .page-node-my-content{
+	.pane-custom{
+		h2{
+			color: @color-text-purple-darker;
+			margin-top: 45px;
+		}
+	}
 	input, textarea, select, .form-control{
 		border: none;
 		border-radius: 0px;
