--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1847,6 +1847,7 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	select,
 	textarea,
 	label,
+	#edit-field-website-und-0-url,
 	#edit-field-website-und-0-url--2{
 		width: 100% !important;
 		max-width: 100%;
@@ -1867,6 +1868,8 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	.form-type-date-select .form-type-select[class*=hour] {
 	    margin-left: 0em;
 	}
+	#edit_field_co_author_und_chosen, 
+	#edit_field_sector_und_chosen,
 	#edit_field_co_author_und__2_chosen, 
 	#edit_field_sector_und__2_chosen {
     	width: 100% !important;
@@ -1875,12 +1878,15 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 
 
 	//buttons
+	button#edit-save-preview,
+	button#edit-submit,
 	button#edit-save-preview--2,
 	button#edit-submit--2{
 		margin-top: 15px;
 		width: 100%;
 		overflow: hidden;
 	}
+	button#edit-send-for-approval,
 	button#edit-send-for-approval--2{
 		font-size: 1em;
 		margin-top: 15px;
@@ -1890,6 +1896,8 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	}
 
 	//file
+	#edit-field-image,
+	#edit-field-private-image,
 	#edit-field-image--2,
 	#edit-field-private-image--2{
 		.image-widget-data{
@@ -1898,9 +1906,6 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 			}
 		}
 	}
-
-
-
 }
 
 .partner-edit-form h2{
