--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -2013,6 +2013,37 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	}
 }
 
+//create-promotional
+.page-node-create-promotional-resource{
+	#edit-title-field--2,
+	#edit-field-oira--2,
+	#edit-field-publication-date--2{
+		float: none;
+	}
+	#edit-title-field--2{
+		max-width: 100%;
+		margin-right: 0px;
+	}
+	#edit-field-publication-date--2{
+		width: 100%;
+	}
+	#edit-field-oira--2{
+		float: left !important;
+		.checkbox input[type="checkbox"]{
+			margin-left: -22px;
+		}
+		label {
+		    padding-left: 17px;
+		}
+	}
+	.form-type-date-select .form-type-select[class*=hour]{
+		margin-left: 0px;
+	}
+	#edit-field-promotional-material-type--2{
+		clear: both;
+	}
+}
+
 /*End private zone*/
 
 /*general search styles
