NOW-237 - Verbaige updates for form buttons, css updated for delete button, added wrapper for messages - centered

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4466,6 +4466,10 @@ margin-top: -15px;
 			content: "> ";
 		}
 	}
+	button#edit-delete,
+	button#edit-delete--2{
+		margin-top: 40px;
+	}
 	button#edit-send-for-approval,
 	button#edit-send-for-approval--2{
 		display: block;
