--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4104,6 +4104,22 @@ div[id ^= "mini-panel-partner_in_"], {
 				background-color: rgba(255, 255, 255, 0.3);
 			}
 		}
+		>li.active{
+			> div{
+				background-color: rgba(255, 255, 255, 0.7);
+				img{
+					-webkit-filter: grayscale(100%) brightness(30%) sepia(100%) hue-rotate(231deg) saturate(200%) contrast(0.8);
+					filter: grayscale(100%) brightness(30%) sepia(100%) hue-rotate(231deg) saturate(200%) contrast(0.8);
+					outline: none;
+				}
+				.introduction-title{
+					a{
+						color: @color-primary-dark;
+						outline: none;
+					}
+				}
+			}
+		}
 		> li{
 			text-align: center;
     		display: table-cell;
