--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-480.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-480.less
@@ -3,8 +3,9 @@
 /*HEADER
 ***********************************************/
 .top-header{
+	margin-top: 15px;
 	.header-logo{
-		margin-top: 14px;
+		margin-top: 0px;
 		.logo{
 			img{
 				width: 124px;
@@ -13,7 +14,10 @@
 		img.eu-logo{
 			width: 35px;
 			margin-left: 12px;
-    		margin-top: 25px;
+    		margin-top: 18px;
+		}
+		.navbar-btn{
+			margin-top: 0px;
 		}
 	}
 	.header-sitename{
@@ -25,7 +29,7 @@
 		}
 	}
 	.header-blocks{
-		top: 91px;
+		top: 70px;
 		.region-header-block{
 			
 		}
