--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -5092,5 +5092,17 @@ margin-top: -15px;
 		}
 	}
 }
+.node-strategic_documentation-form{
+	.form-type-radios{
+		.form-radios{
+			input[type=radio]{
+				margin-left:0px;
+			}
+			label{
+				padding-left:20px;
+			}
+		}
+	}
+}
 
 /*End private zone*/
