--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4129,3 +4129,9 @@ div[id ^= "mini-panel-partner_in_"], {
 		}
 	}
 }
+
+/*Facts and Figures
+***********************/
+.page-node-401.node-type-article{
+	
+}
